--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
         <!--location-->
-        <form>
+        <form class="form">
           <div class="group2">
             <label for="location">Location</label>
             <input
